<resources>
    <string name="app_name">Shopping</string>
    <string name="add_new_product">Add New Product</string>
    <string name="todo">todo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">login</string>
    <string name="i_m_an_admin">I am an admin</string>
    <string name="i_m_not_admin">I am Not Admin</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an account login</string>
    <string name="find_discover_choose_and_buy">Find, Discover, Choose and Buy</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Nnumber</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="we_just_need_your_registered_email_id_to_sent_you_password_reset_instructions">We just need Your registered Email id to sent you Password reset Instructions</string>
    <string name="forget_password_la">Forget Password ??</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="congratulations_your_final_order_has_been_added_succeddfully_soon_you_ll_received">Congratulations, Your Final Order has been added Succeddfully . Soon, You\'ll Verified.</string>
    <string name="next">Next</string>
    <string name="total_price">Total price =</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">ADD</string>
    <string name="title_notifications">Logout</string>
</resources>