<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Buyers.LoginActivity">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        android:id="@+id/login_applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/todo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_applogo"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/email"
        android:id="@+id/login_email_input"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        tools:ignore="TextFields"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_input"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/login_password_input"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="10dp" />
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember_me_chkb"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
            android:shadowColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_password_link"
            android:text="@string/forget_password"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="80dp"
            />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/login"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_link"
        android:text="@string/i_m_an_admin"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="23dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_admin_link"
        android:text="@string/i_m_not_admin"
        android:layout_below="@+id/login_btn"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="23dp"
        android:visibility="invisible"
        />

</RelativeLayout>