<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".Buyers.RegisterActivity">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        android:id="@+id/register_applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/todo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_applogo"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/name"
        android:id="@+id/register_name_input"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        tools:ignore="TextFields"
        android:autofillHints="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name_input"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/email"
        android:id="@+id/register_email_input"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        tools:ignore="TextFields"
        android:autofillHints=""
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_input"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:id="@+id/register_phone_number_input"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        tools:ignore="TextFields"
        android:layout_marginTop="10dp"
        android:autofillHints="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number_input"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:id="@+id/register_password_input"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        tools:ignore="TextFields"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/register_password_input"
        android:layout_marginTop="5dp"
        >

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/creat_account"
        android:layout_below="@+id/linear_layout_2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/create_account"
        />

</RelativeLayout>