<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".Buyers.MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/app_logo"
        android:layout_marginTop="60dp"
        android:src="@drawable/applogo"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/find_discover_choose_and_buy"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="88dp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_login_btn"
        android:layout_above="@+id/seller_begin"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/already_have_an_account_login"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/join_now_btn"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:background="@drawable/inputs_design"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/join_now"
        />
    <TextView
        android:id="@+id/seller_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wants to become a Seller"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>