<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.CartActivity">
    <RelativeLayout
        android:id="@+id/r111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            />


    </RelativeLayout>
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:textSize="25sp"
        android:text="@string/congratulations_your_final_order_has_been_added_succeddfully_soon_you_ll_received"
        android:visibility="gone"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cart_view"
        android:layout_below="@+id/r111"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/next_procress_btn">

    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/next_procress_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

</RelativeLayout>